--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,13 @@
 [package]
 name = "shell-words"
 version = "1.1.0"
+edition = "2021"
 authors = ["Tomasz Miąsko <tomasz.miasko@gmail.com>"]
 license = "MIT/Apache-2.0"
 repository = "https://github.com/tmiasko/shell-words"
 description = "Process command line according to parsing rules of UNIX shell"
 readme = "README.md"
-keywords = [
-  "quote",
-  "shell",
-  "split",
-  "unix",
-  "words",
-]
+keywords = ["quote", "shell", "split", "unix", "words"]
 
 [features]
 default = ["std"]
